Ajustes no fogo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Page Title</title>
+    <title>Fogo do Doom</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       table {
@@ -32,8 +32,8 @@
       }
 
       td.pixel {
-        width: 4px;
-        height: 4px;
+        width: 8px;
+        height: 8px;
         border: 0;
       }
     </style>
